style.css
body {
  margin: 0px;
  padding: 0px;
}

#info-panel {
  height: 6vh;
  border-bottom: 1px solid black;
}

#halls-selection {
  display: none;
}

.drop-control {
  text-align: center;
}

#map {
  height: 94vh;
  width: 100vw;
}

#logo {
  padding-top: 1vh;
  text-align: center;
}

#logo img {
  height: 4vh;
  width: auto;
}

#copyright-desktop {
  display: none;
}

.universities {
  color: #0074e8;
  cursor: hand;
  cursor: pointer;
}

#all {
  margin-top: 7px;
}

.company-description-container {
  display: none;
}

.company-description-hidden {
  display: none;
}

.company-description-container-mobile {
  display: block;
}

.company-description-hidden-mobile {
  display: block;
}

.instructions {
  line-height: 20px;
}

.universities, .universities-all {
  position: relative;
  bottom: 3px;
  left: 3px;
}

.universities:hover {
  color: black;
}

.info {
    padding: 6px 8px;
    font: 10px/12px Arial, Helvetica, sans-serif;
    background: white;
    background: rgba(255,255,255,0.9);
    border: 1px solid black;
}

.info h4 {
    margin: 0 0 5px;
    font-size: 1em;
    font-weight: bold;
}

.circle-left-padding {
  padding-left: 10px;
}

.leaflet-popup-content-wrapper, .leaflet-popup-tip {
  box-shadow: none;
  border: 1px solid black;
  background: rgba(255,255,255,0.9);
  border-radius: 0px;
  max-width: 200px;
}

.leaflet-touch .leaflet-bar {
  border: 1px solid black;
  border-radius: 0px;
}

.control-all-hr {
  margin-top: 5px;
  margin-bottom: 5px;
  border-top: 1px solid black;
}

.app-name {
  display: inline;
  font-weight: bold;
  position: relative;
  right: 4px;
  top: 1px;
}

.modal-link {
  display: block;
  font-weight: bold;
  color: rgb(232, 0, 0);
}

.company-description-modal {
  text-align: left;
  max-height: 50vh;
  overflow: scroll;
  border-bottom: 1px solid rgb(232, 0, 0);
}

.remodal-cancel-red {
  background: rgb(232, 0, 0);
  border: none;
  color: white;
  padding: 8px 16px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
}

.leaflet-bottom {
  bottom: 3vw;
}

@media only screen and (min-width: 768px) {
  .app-name {
    font-size: 1.2em;
  }

  .drop-control {
    display: none;
    font-weight: normal;
    padding-bottom: 10px;
  }

  #halls-selection {
    display: block;
  }

  .info {
      font: 14px/16px Arial, Helvetica, sans-serif;
  }

  .universities, .universities-all {
    bottom: 2px;
  }

  .company-description-container {
    display: block;
    padding-top: 3px;
  }

  .company-description {
    margin-top: 2px;
    padding: 5px;
    text-align: left;
    display: block;
    max-height: 60vh;
    max-width: 30vw;
  }

  .instructions {
    display: block;
    text-align: left;
  }

  .exit-button {
    float: right
  }

  .exit-button:hover {
    color: red;
    cursor: hand;
    cursor: pointer;
  }

  .info-company-name {
    padding-left:5px;
  }

  .modal-link {
    display: none;
  }

  .company-description-container-mobile {
    display: none;
  }

  .company-description-hidden-mobile {
    display: none;
  }
}

